Can create and join teams

--- a/application/package.json
+++ b/application/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@thirdweb-dev/auth": "^3.0.21",
     "@thirdweb-dev/chains": "^0.1.73",
     "@thirdweb-dev/react": "^3",
