--- a/application/package.json
+++ b/application/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@thirdweb-dev/auth": "^3.0.21",
